# django_moneymoney

./: .gitignore  Dockerfile  README.md  django_moneymoney.epj  manage.py  new_installation.py  pyproject.toml  requirements.txt  update_reusing.py
.github/workflows/: django.yml  docker-check.yml  docker-publish.yml
django_moneymoney/: asgi.py  presettings.py  settings.py  urls.py  wsgi.py
doc/: CATALOGMANAGER.md  Doxyfile  administrator.dox  developer.dox  entity_relationship.md  index.dox  javascript.md  permissions.md  structure.md  userconsiderations.dox
moneymoney/: __init__.py  admin.py  apps.py  assetsreport.py  call_by_name.py  casts.py  charts.py  connection_dj.py  connection_pg.py  currency.py  database_update.py  decorators.py  devscripts.py  exceptions.py  factory.py  factory_helpers.py  forms.py  functions.py  hardcoded_strings.py  indicators.py  investing_com.py  investment_operations.py  investment_operations_new.py  investmentsoperations.py  ios.py  listdict.py  listdict_functions.py  middleware.py  models.py  paginators.py  percentage.py  permissions.py  poethepoet.py  productrange.py  request_casting.py  serializers.py  signals.py  tables.py  tests.py  tests_data.py  (+5 more)
moneymoney/data/: catalogs.json  products.json
moneymoney/fixtures/: concepts.json  other.json  test_server.json  test_users.json
moneymoney/migrations/: 0001_initial.py  0002_auto_20200922_0639.py  0002_auto_20230107_2039.py  0003_add_group_catalog_manager.py  0003_auto_20201115_0857.py  0004_alter_stockmarkets_id.py  0005_alter_leverages_id.py  0006_alter_productstypes_id.py  0007_alter_quotes_id.py  0008_remove_accountsoperations_operationstypes.py  0009_accountsoperations_operationstypes.py  0010_auto_20230114_1314.py  0011_delete_investmentsaccountsoperations.py  0012_remove_accountsoperations_operationstypes.py  0013_remove_creditcardsoperations_operationstypes.py  0014_alter_creditcardsoperations_accountsoperations.py  0015_alter_operationstypes_id.py  0016_profile.py  0017_auto_20230115_0848_create_missing_profiles.py  0018_delete_globals.py  0019_delete_annualtargets.py  0020_delete_opportunities.py  0021_delete_simulations.py  0022_delete_estimationseps.py  0023_rename_estimationsdps_oldestimationsdps_and_more.py  0024_estimationsdps.py  0025_auto_20230115_1645_migrating_old_estimations_dps.py  0026_alter_estimationsdps_date_estimation_and_more.py  0027_alter_estimationsdps_table.py  0028_alter_orders_price.py  0029_auto_20230122_0550_bigint_to_integer.py  0030_profile_annual_gains_target.py  0031_data_inverting_products_id.py  0032_alter_orders_expiration.py  0033_function_currency_factor_invert_ids.py  0034_new_pl_total_balance_function.py  0035_new_plio_functions.py  0036_investments_decimals.py  0037_remove_investmentsoperations_show_in_ranges_and_more.py  0038_fastoperationscoverage.py  (+32 more)
moneymoney/reusing/: casts.py  connection_dj.py  connection_pg.py  datetime_functions.py  decorators.py  file_functions.py  libmanagers.py  lineal_regression.py  listdict_functions.py  myjsonencoder.py  request_casting.py  responses_json.py  sqlparser.py  tabulator.py  tests_dinamic_methods.py  tests_helpers.py  text_inputs.py
moneymoney/sql/: 202008212009.sql  202008230700.sql  202008230810.sql  202008250704.sql  202008291020.sql  202109051910.sql  202110180841.sql  202110200447.sql  202110240618.sql  202110310705.sql  (+9 more)
(+176 files in other folders)
