[project]
name = "django-moneymoney"
version = "1.3.0"
description = "Personal accounting and financial system"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django >=5.2.1",
    "django-cors-headers >=4.7.0",
    "djangorestframework >=3.16.0",
    "drf-spectacular >=0.28.0",
    "pydicts >=1.1.0",
    "requests >=2.32.3",
    "request-casting >=0.7.0",
    "psycopg >=3.2.9"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.34.0"
poetry = ">=2.1.3"
coverage = ">=7.8.2"


[tool.poe.tasks]
reusing = { script = "moneymoney.poethepoet:reusing" }
cypress_test_server = { script = "moneymoney.poethepoet:cypress_test_server" }

[project.urls]
homepage = "https://github.com/turulomio/django_moneymoney/"
repository = "https://github.com/turulomio/django_moneymoney/"
changelog = "https://github.com/turulomio/django_moneymoney#changelog"
