[project]
name = "django-moneymoney"
version = "1.3.0"
description = "Personal accounting and financial system"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django >=6.0",
    "django-cors-headers >=4.9.0",
    "djangorestframework >=3.16.1",
    "drf-spectacular >=0.29.0",
    "pydicts >=1.1.0",
    "requests >=2.32.5",
    "request-casting >=0.7.0",
    "psycopg >=3.3.2",
    "pandas >=2.3.3",
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.38.0"
poetry = ">=2.2.1"
coverage = ">=7.13.0"


[tool.poe.tasks]
reusing = { script = "moneymoney.poethepoet:reusing" }
testserver_e2e = { script = "moneymoney.poethepoet:testserver_e2e" }

[project.urls]
homepage = "https://github.com/turulomio/django_moneymoney/"
repository = "https://github.com/turulomio/django_moneymoney/"
changelog = "https://github.com/turulomio/django_moneymoney#changelog"
